ADD : 예약 화면 실습실 현황 조회 구현

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -274,6 +274,9 @@
                 <include
                     android:id="@+id/seatGridView"
                     layout="@layout/sub_seat_gridview"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     />
             </LinearLayout>
             <!-- LAYOUT END 실습실 좌석 그리드 뷰 -->
