--- a/app/src/main/res/layout/fragment_reserv.xml
+++ b/app/src/main/res/layout/fragment_reserv.xml
@@ -192,22 +192,11 @@
                         android:textColor="@color/natural_navy"
                         android:textSize="14dp" />
 
-                    <TextView
-                        android:id="@+id/todayTimeTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:fontFamily="@font/noto_sans_kr_regular"
-                        android:includeFontPadding="false"
-                        android:text="2022-09-15 16 : 20"
-                        android:textColor="@color/black"
-                        android:textSize="10dp" />
-
-
                     <include
                         android:id="@+id/seatGridView"
                         android:layout_width="match_parent"
-                        android:layout_height="250dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
                         layout="@layout/sub_seat_gridview"/>
                 </LinearLayout>
                 <!-- LAYOUT END 좌석 그리드뷰 레이아웃 -->
@@ -233,14 +222,28 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/noto_sans_kr_bold"
-                        android:includeFontPadding="false"
-                        android:text="이용 시간"
-                        android:textColor="@color/natural_navy"
-                        android:textSize="14dp" />
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/noto_sans_kr_bold"
+                            android:includeFontPadding="false"
+                            android:text="이용 시간"
+                            android:textColor="@color/natural_navy"
+                            android:textSize="14dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/noto_sans_kr_regular"
+                            android:includeFontPadding="false"
+                            android:text="  * 미선택시 현재 시간의 좌석이 조회됩니다."
+                            android:textColor="@color/natural_navy"
+                            android:textSize="10dp" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
