--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -51,7 +51,7 @@
         <item>#E0FFDC</item>
         <item>#D4F4FA</item>
         <item>#DAD9FF</item>
-        <item>#FFD9FA</item>
+        <item>#FFE6FC</item>
         <item>#DAD9FF</item>
         <item>#B2CCFF</item>
         <item>#E7E7E7</item>
