--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -43,6 +43,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/userNameTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="5dp"
@@ -58,9 +59,40 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:src="@drawable/badge"/>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"/>
+
+                    <!-- LAYOUT 사용자 유형 레이아웃 -->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|right"
+                        app:cardBackgroundColor="@color/light_blue"
+                        app:cardElevation="0dp"
+                        app:cardCornerRadius="5dp">
+
+                        <TextView
+                            android:id="@+id/userTypeTv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="10dp"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginTop="1dp"
+                            android:layout_marginBottom="1dp"
+                            android:text="재학생"
+                            android:textSize="12dp"
+                            android:textColor="#0266FF"
+                            />
+
+                    </androidx.cardview.widget.CardView>
+                    <!-- LAYOUT END 사용자 유형 레이아웃 -->
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/userIdTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20181234"
@@ -71,6 +103,7 @@
                     />
 
                 <TextView
+                    android:id="@+id/majorTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="컴퓨터소프트웨어공학과"
@@ -98,6 +131,7 @@
 
         <!-- LAYOUT 메뉴 레이아웃 (프로필 설정) -->
         <LinearLayout
+            android:id="@+id/profileMenuLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
@@ -296,8 +330,50 @@
         </LinearLayout>
         <!-- LAYOUT END 메뉴 레이아웃 (설정) -->
 
+        <!-- LAYOUT 메뉴 레이아웃 (회원 탈퇴) -->
+        <LinearLayout
+            android:id="@+id/withdrawMenuLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="25dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="10dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/withdrawal_icon"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="회원 탈퇴"
+                android:textSize="14dp"
+                android:textColor="@drawable/selector_profile_menu_onclick_pink"
+                android:fontFamily="@font/poppins_medium"
+                android:includeFontPadding="false"
+                />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+            <ImageView
+                android:layout_width="8dp"
+                android:layout_height="12dp"
+                android:layout_gravity="center_vertical|right"
+                android:src="@drawable/arrow_right_v2"
+                />
+        </LinearLayout>
+        <!-- LAYOUT END 메뉴 레이아웃 (회원 탈퇴) -->
+
         <!-- LAYOUT 메뉴 레이아웃 (로그아웃) -->
         <LinearLayout
+            android:id="@+id/logoutMenuLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="25dp"
@@ -318,7 +394,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="로그아웃"
                 android:textSize="14dp"
-                android:textColor="@drawable/selector_profile_menu_onclick"
+                android:textColor="@drawable/selector_profile_menu_onclick_pink"
                 android:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
                 />
