--- a/app/src/main/res/layout/sub_seat_gridview.xml
+++ b/app/src/main/res/layout/sub_seat_gridview.xml
@@ -73,7 +73,9 @@
                 android:horizontalSpacing="1dp"
                 android:listSelector="#00000000"
                 android:numColumns="4"
-                android:verticalSpacing="15dp" />
+                android:verticalSpacing="15dp"
+                android:scrollbars="none"
+                />
 
             <GridView
                 android:id="@+id/rightSeatGridView"
@@ -83,7 +85,9 @@
                 android:layout_weight="1"
                 android:horizontalSpacing="1dp"
                 android:numColumns="4"
-                android:verticalSpacing="15dp" />
+                android:verticalSpacing="15dp"
+                android:scrollbars="none"
+                />
         </LinearLayout>
         <!-- LAYOUT END 실습실 좌석 그리드 레이아웃 -->
 
