--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF3333</color>
+    <color name="pink">#FF4BD7</color>
 
     <color name="colorAccent">#00A8FF</color>
 
