--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -32,6 +32,7 @@
                 android:textSize="12dp" />
 
             <TextView
+                android:id="@+id/notifyTitleTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/noto_sans_kr_bold"
@@ -42,6 +43,7 @@
                 android:textSize="20dp" />
 
             <TextView
+                android:id="@+id/notifyContentTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
