ADD : 프로필 ViewInitializer 추가

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -175,6 +175,7 @@
 
             <!-- LAYOUT 메뉴 레이아웃 (예약내역 조회) -->
             <LinearLayout
+                android:id="@+id/reservHistoryMenuLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="25dp"
@@ -195,7 +196,7 @@
                     android:layout_gravity="center_vertical"
                     android:fontFamily="@font/poppins_medium"
                     android:includeFontPadding="false"
-                    android:text="예약내역 조회"
+                    android:text="예약 내역 조회"
                     android:textColor="@drawable/selector_profile_menu_onclick"
                     android:textSize="14dp" />
 
@@ -211,6 +212,46 @@
                     android:src="@drawable/arrow_right_v2" />
             </LinearLayout>
             <!-- LAYOUT END 메뉴 레이아웃 (예약내역 조회) -->
+
+            <!-- LAYOUT 메뉴 레이아웃 (회원 목록 조회) -->
+            <LinearLayout
+                android:id="@+id/userListMenuLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginEnd="10dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/user_list_menu_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="@font/poppins_medium"
+                    android:includeFontPadding="false"
+                    android:text="회원 목록 조회"
+                    android:textColor="@drawable/selector_profile_menu_onclick"
+                    android:textSize="14dp" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="12dp"
+                    android:layout_gravity="center_vertical|right"
+                    android:src="@drawable/arrow_right_v2" />
+            </LinearLayout>
+            <!-- LAYOUT END 메뉴 레이아웃 (회원 목록 조회) -->
 
             <!-- LAYOUT 메뉴 레이아웃 (사용자 신고) -->
             <LinearLayout
@@ -251,6 +292,46 @@
                     android:src="@drawable/arrow_right_v2" />
             </LinearLayout>
             <!-- LAYOUT END 메뉴 레이아웃 (사용자 신고) -->
+
+            <!-- LAYOUT 메뉴 레이아웃 (불편 사항 접수 목록) -->
+            <LinearLayout
+                android:id="@+id/reportListMenuLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="25dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginEnd="10dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/report_menu_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="@font/poppins_medium"
+                    android:includeFontPadding="false"
+                    android:text="불편 사항 접수 목록"
+                    android:textColor="@drawable/selector_profile_menu_onclick"
+                    android:textSize="14dp" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <ImageView
+                    android:layout_width="8dp"
+                    android:layout_height="12dp"
+                    android:layout_gravity="center_vertical|right"
+                    android:src="@drawable/arrow_right_v2" />
+            </LinearLayout>
+            <!-- LAYOUT END 메뉴 레이아웃 (불편 사항 접수 목록) -->
 
             <!-- LAYOUT 메뉴 레이아웃 (앱 정보) -->
             <LinearLayout
