--- a/app/src/main/res/layout/sub_request_reserv.xml
+++ b/app/src/main/res/layout/sub_request_reserv.xml
@@ -23,7 +23,7 @@
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_gravity="center"
             android:buttonTint="@color/gray"
@@ -71,8 +71,9 @@
             android:id="@+id/reservTimeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginBottom="5dp"
+            android:layout_marginEnd="10dp"
 
             android:fontFamily="@font/poppins_regular"
             android:includeFontPadding="false"
@@ -85,7 +86,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/reservTimeTextView"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
             android:fontFamily="@font/poppins_regular"
             android:includeFontPadding="false"
             android:text="11번 좌석"
