--- a/app/src/main/res/layout/sub_seat_gridview.xml
+++ b/app/src/main/res/layout/sub_seat_gridview.xml
@@ -185,6 +185,7 @@
                 android:background="@drawable/ic_rectangle_close" />
 
             <TextView
+                android:id="@+id/blurViewText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
