--- a/app/src/main/res/layout/fragment_reserv_result.xml
+++ b/app/src/main/res/layout/fragment_reserv_result.xml
@@ -64,7 +64,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="40dp"
                 android:layout_marginBottom="70dp"
                 android:orientation="vertical">
 
@@ -86,7 +86,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/noto_sans_kr_bold"
                     android:includeFontPadding="false"
-                    android:text="정보공학관 911호"
+                    android:text="-"
                     android:textColor="@color/natural_navy"
                     android:textSize="16dp" />
 
@@ -134,7 +134,7 @@
                     android:layout_gravity="right|center"
                     android:fontFamily="@font/poppins_regular"
                     android:includeFontPadding="false"
-                    android:text="김잼민 (20181234)"
+                    android:text="-"
                     android:textColor="@color/black_gray"
                     android:textSize="12dp" />
             </LinearLayout>
@@ -175,7 +175,7 @@
                     android:layout_gravity="right|center"
                     android:fontFamily="@font/poppins_regular"
                     android:includeFontPadding="false"
-                    android:text="컴퓨터소프트웨어공학과"
+                    android:text="-"
                     android:textColor="@color/black_gray"
                     android:textSize="12dp" />
             </LinearLayout>
@@ -215,7 +215,7 @@
                     android:layout_gravity="right|center"
                     android:fontFamily="@font/poppins_regular"
                     android:includeFontPadding="false"
-                    android:text="정보공학관 911 호"
+                    android:text="-"
                     android:textColor="@color/black_gray"
                     android:textSize="12dp" />
             </LinearLayout>
@@ -255,7 +255,7 @@
                     android:layout_gravity="right|center"
                     android:fontFamily="@font/poppins_regular"
                     android:includeFontPadding="false"
-                    android:text="11 번"
+                    android:text="-"
                     android:textColor="@color/black_gray"
                     android:textSize="12dp" />
             </LinearLayout>
@@ -296,7 +296,7 @@
                     android:layout_gravity="right|center"
                     android:fontFamily="@font/poppins_regular"
                     android:includeFontPadding="false"
-                    android:text="11:00 ~ 16:00"
+                    android:text="-"
                     android:textColor="@color/black_gray"
                     android:textSize="12dp" />
             </LinearLayout>
