--- a/app/src/main/res/layout/fragment_user_list_in_lab.xml
+++ b/app/src/main/res/layout/fragment_user_list_in_lab.xml
@@ -5,28 +5,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view.fragment.UserListFragment">
-
-    <data>
-
-        <variable
-            name="DateManager"
-            type="com.example.lab.utils.DateManager" />
-    </data>
+    tools:context=".view.fragment.UserListInLabFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:clickable="true"
-        android:focusable="true"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="30dp">
+            android:paddingStart="30dp"
+            android:paddingEnd="30dp"
+            android:paddingTop="30dp">
 
             <TextView
                 android:id="@+id/todayTV"
@@ -34,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
-                android:text="2022-11-16"
+                android:text="2022-09-23"
                 android:textColor="@color/colorAccent"
                 android:textSize="12dp" />
 
@@ -57,7 +50,7 @@
                 android:fontFamily="@font/noto_sans_kr_regular"
 
                 android:includeFontPadding="false"
-                android:text="전체 회원 중 재학생의 정보만 보여집니다."
+                android:text="선택하신 시간대에 이용 중인 사용자 목록입니다."
                 android:textColor="@color/black_gray"
                 android:textSize="12dp" />
 
@@ -92,28 +85,28 @@
             android:textSize="18dp" />
 
 
-        <!--        <LinearLayout-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:orientation="horizontal">-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal">-->
 
-        <!--            <View-->
-        <!--                android:layout_width="0dp"-->
-        <!--                android:layout_height="0dp"-->
-        <!--                android:layout_weight="1"/>-->
+<!--            <View-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="0dp"-->
+<!--                android:layout_weight="1"/>-->
 
-        <!--            <Button-->
-        <!--                android:id="@+id/approvalBtn"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="right|center_vertical"-->
-        <!--                android:text="확인"-->
-        <!--                android:textSize="16dp"-->
-        <!--                android:textColor="@color/colorAccent"-->
-        <!--                android:fontFamily="@font/poppins_regular"-->
-        <!--                android:backgroundTint="@color/white"-->
-        <!--                style="?android:attr/borderlessButtonStyle"/>-->
-        <!--        </LinearLayout>-->
+<!--            <Button-->
+<!--                android:id="@+id/approvalBtn"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="right|center_vertical"-->
+<!--                android:text="확인"-->
+<!--                android:textSize="16dp"-->
+<!--                android:textColor="@color/colorAccent"-->
+<!--                android:fontFamily="@font/poppins_regular"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                style="?android:attr/borderlessButtonStyle"/>-->
+<!--        </LinearLayout>-->
     </LinearLayout>
 </layout>
 
