--- a/app/src/main/res/layout/fragment_reserv.xml
+++ b/app/src/main/res/layout/fragment_reserv.xml
@@ -176,7 +176,8 @@
                 <!-- LAYOUT 좌석 그리드뷰 레이아웃 -->
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="40dp"
                     android:orientation="vertical">
